# AI-Directory-Management-System

./: .env.example  .gitignore  LICENSE  README.md  README2.md  README_OLD.md  pyproject.toml  requirements.txt  setup.ps1
aether/: __init__.py  config.py  main.py  utils.py
aether/brain/: __init__.py  organizer.py  reader.py  scanner.py  searcher.py  thinker.py
aether/storage/: __init__.py  database.py  memory.py
aether/ui/: __init__.py  beauty.py
client/src/pages/: SearchPage.tsx  SettingsPage.tsx
docs/: ARCHITECTURE.md  GETTING_STARTED.md  Project_Flowchart.md  Project_Report.md
tests/: test_basic.py
